--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "doctrine/annotations": ">=1.0",
         "ircmaxell/random-lib": "dev-master",
         "ircmaxell/security-lib": "dev-master",
+        "mikey179/vfsStream": "1.2.*",
         "ocramius/proxy-manager": "0.4.*",
         "phpunit/PHPUnit": "3.7.*"
     },
